# osig

./: .env.example  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  Dockerfile-python  Makefile  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  VISION.md  docker-compose-local.yml  docker-compose-prod.yml  mcp_http_server.py  mcp_server.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  skills-lock.json
.agents/skills/fastmcp-django/: SKILL.md
.github/workflows/: deploy.yml
.impeccable/live/: config.json
agent_images/: apps.py  mcp.py  services.py  templates.py  views.py
core/: admin.py  font_providers.py  image_styles.py  image_url_safety.py  image_utils.py  mcp.py  mcp_auth.py  models.py  render_observability.py  signing.py  tasks.py  urls.py  views.py
core/api/: schemas.py  views.py
core/migrations/: 0012_rename_renderattempt_style_renderer.py  0013_delete_image.py
core/templatetags/: seo_tags.py
core/tests/: conftest.py  test_generate_image_features.py  test_mcp.py  test_mcp_auth.py  test_onboarding_wizard.py  test_removed_legacy_endpoints.py  test_render_reliability.py  test_usage_quota.py  test_views.py  test_wordpress_helper.py
deployment/: Dockerfile  entrypoint.sh
docs/: agent-mcp.md  agent-repo-publishing.md  getting-started.md  human-usage.md  index.md  job-board-template-pack-v1.md  product-guardrails.md  reliability-observability.md  self-hosting.md  template-library.md  usage-metering-quota.md
docs/superpowers/specs/: 2026-06-15-agent-image-studio-design.md  2026-06-18-agent-canvas-renderer.md
frontend/src/application/: index.js
frontend/src/controllers/: agent_studio_controller.js  clipboard_controller.js  image_generator_controller.js  onboarding_wizard_controller.js
frontend/src/styles/: index.css
frontend/templates/: base.html  robots.txt
frontend/templates/account/: email_confirm.html  login.html  logout.html  signup.html
frontend/templates/blog/: blog_post.html  blog_posts.html
osig/: asgi.py  settings.py  sitemaps.py  urls.py
scripts/: mcp-dev
(+9 files in other folders)
