[project]
name = "osig"
version = "0.1.0"
description = "Open Source Social Image Generator"
authors = [{ name = "Rasul Kireev", email = "me@rasulkireev.com" }]
requires-python = ">=3.10,<4.0"
dependencies = [
    "dj-stripe>=2.8.4,<2.9.0",
    "django>=5.0.4,<6.0.0",
    "django-allauth[socialaccount]>=64.0.0,<65.0.0",
    "django-anymail[mailgun]>=12.0,<13.0",
    "django-environ>=0.11.2,<0.12.0",
    "django-extensions>=3.2.3,<4.0.0",
    "django-ninja>=1.4.3,<2.0.0",
    "django-q2>=1.7.2,<2.0.0",
    "django-storages[s3]>=1.14.4,<2.0.0",
    "django-structlog>=8.1.0,<9.0.0",
    "django-widget-tweaks>=1.4.12,<2.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "ipython>=8.27.0,<9.0.0",
    "logfire>=4.13.1,<5.0.0",
    "markdown>=3.7,<4.0",
    "mkdocs>=1.4.2,<2.0.0",
    "mkdocs-material>=9.0.12,<10.0.0",
    "mkdocstrings>=0.20.0,<0.21.0",
    "opentelemetry-instrumentation-logging==0.48b0",
    "pillow>=10.4.0,<11.0.0",
    "posthog>=3.6.6,<4.0.0",
    "psycopg2>=2.9.9,<3.0.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-django>=4.9.0,<5.0.0",
    "python-webpack-boilerplate>=1.0.0,<2.0.0",
    "redis>=5.0.8,<6.0.0",
    "sentry-sdk[django]>=2.14.0,<3.0.0",
    "stripe>=4.0.0,<4.1.0",
    "structlog>=24.4.0,<25.0.0",
    "structlog-sentry>=2.2.1,<3.0.0",
    "whitenoise>=6.7.0,<7.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.2.1,<4.0.0",
    "pylint>=2.17.1,<3.0.0",
    "pylint-django>=2.5.3,<3.0.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.djlint]
profile="django"
ignore = "H031,H006,H023,H021,H011"

[tool.ruff]
line-length = 120

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
